# visual-cryptography

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: dhiman_kasana_example.rs  naor_shamir_example.rs  taghaddos_latif_example.rs  xor_based_example.rs  yamaguchi_nakajima_example.rs
src/: algorithms.rs  error.rs  lib.rs  matrix.rs  qr_code.rs  share.rs  utils.rs
