[package]
name = "visual-cryptography"
version = "0.0.3"
edition = "2021"
authors = ["Vlad Dyachenko wowinter13 <gotta.go.vlad@gmail.com>"]
description = "A Rust implementation of visual cryptography algorithms supporting multiple schemes and block sizes"
license = "MIT"
repository = "https://github.com/wowinter13/visual-cryptography"
keywords = [
  "cryptography",
  "visual-cryptography",
  "image-processing",
  "steganography",
]
categories = [
  "cryptography",
  "multimedia::images",
  "algorithms",
  "encoding",
  "security",
]

exclude = ["assets/*"]

[dependencies]
image = "0.24"
rand = "0.9.1"
thiserror = "1.0"
nalgebra = "0.33.2"
qrcode = "0.14"

[dev-dependencies]
criterion = "0.6"
tempfile = "3.8"
